add_library( opgen-epsilon

   P2ElementwiseEpsilonAnnulusMap_0_0.cpp
   P2ElementwiseEpsilonAnnulusMap_0_0.hpp
   P2ElementwiseEpsilonAnnulusMap_0_1.cpp
   P2ElementwiseEpsilonAnnulusMap_0_1.hpp
   P2ElementwiseEpsilonAnnulusMap_1_0.cpp
   P2ElementwiseEpsilonAnnulusMap_1_0.hpp
   P2ElementwiseEpsilonAnnulusMap_1_1.cpp
   P2ElementwiseEpsilonAnnulusMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.hpp
   P2ElementwiseEpsilon_0_0.cpp
   P2ElementwiseEpsilon_0_0.hpp
   P2ElementwiseEpsilon_0_1.cpp
   P2ElementwiseEpsilon_0_1.hpp
   P2ElementwiseEpsilon_0_2.cpp
   P2ElementwiseEpsilon_0_2.hpp
   P2ElementwiseEpsilon_1_0.cpp
   P2ElementwiseEpsilon_1_0.hpp
   P2ElementwiseEpsilon_1_1.cpp
   P2ElementwiseEpsilon_1_1.hpp
   P2ElementwiseEpsilon_1_2.cpp
   P2ElementwiseEpsilon_1_2.hpp
   P2ElementwiseEpsilon_2_0.cpp
   P2ElementwiseEpsilon_2_0.hpp
   P2ElementwiseEpsilon_2_1.cpp
   P2ElementwiseEpsilon_2_1.hpp
   P2ElementwiseEpsilon_2_2.cpp
   P2ElementwiseEpsilon_2_2.hpp
   P2VectorElementwiseEpsilon.cpp
   P2VectorElementwiseEpsilon.hpp
   P2VectorElementwiseEpsilonAnnulusMap.cpp
   P2VectorElementwiseEpsilonAnnulusMap.hpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityAnnulusMap.cpp
   P2VectorElementwiseEpsilonP1ViscosityAnnulusMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap.hpp
   P2VectorElementwiseEpsilonP1ViscosityParametricP2Map.cpp
   P2VectorElementwiseEpsilonP1ViscosityParametricP2Map.hpp
)
target_link_libraries( opgen-epsilon PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-epsilon PRIVATE

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_applyScaled_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_applyScaled_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_applyScaled_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_applyScaled_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_applyScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_applyScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrixScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrixScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrixScaled_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrixScaled_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrixScaled_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrixScaled_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrixScaled_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrixScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrixScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrixScaled_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrixScaled_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrixScaled_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrixScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrixScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrixScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrixScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_applyScaled_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_applyScaled_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_applyScaled_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_applyScaled_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_applyScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_applyScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-epsilon PRIVATE

      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_applyScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrixScaled_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_applyScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrixScaled_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_applyScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrixScaled_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrixScaled_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_applyScaled_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrixScaled_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrixScaled_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_applyScaled_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrixScaled_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_applyScaled_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrixScaled_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrixScaled_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_applyScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrixScaled_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrixScaled_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_applyScaled_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrixScaled_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_applyScaled_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrixScaled_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_applyScaled_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrixScaled_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_applyScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrixScaled_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_applyScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrixScaled_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_applyScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_applyScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_toMatrixScaled_P2VectorElementwiseEpsilonP1ViscosityParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_applyScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrixScaled_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrixScaled_P2VectorElementwiseEpsilon_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-epsilon PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-epsilon PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-epsilon PUBLIC cxx_std_17)
endif ()
